--- a/assets/style.css
+++ b/assets/style.css
@@ -1,38 +1,12 @@
-.card-home {
-    padding: 30px 0 0 0;
-    width: 100%;
+
+ .indent{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 70%;   
     margin: 0 auto;
+   }
+.indent *{
+   font-family: 'Darker Grotesque';
+   font-size: 1.0rem;
 }
-.card-login {
-    padding: 30px 0 0 0;
-    width: 350px;
-    margin: 0 auto;
-  }
-
-.form-control{
-    text-align: center !important;
-    color:#7910A8 !important;
-}
-
-.btn.btn-lg.btn-info.btn-block {
- background-color: #7910A8;
-}
-.btn.btn-lg.btn-info.btn-block:hover {
- background-color: rgb(65, 13, 88);
-}
-
-:-webkit-input-placeholder {
-    color:#7910A8;
- }
-  
- :-moz-placeholder { /* Firefox 18- */
-    color: #7910A8;  
- }
-  
- ::-moz-placeholder {  /* Firefox 19+ */
-    color: #7910A8;  
- }
-  
- :-ms-input-placeholder {  
-    color: #7910A8;  
- }
