--- a/assets/index.css
+++ b/assets/index.css
@@ -7,15 +7,17 @@
     }
 
     .check-box{
-        display: flex;
-        justify-content: start;
+        display: inline;
+        margin: 0 auto;
+        color: #7910A8 ;
     }
-
+    
     .check-box span{
-        margin-left: 5px;
         align-items: center;
-        margin-bottom: 5px;
-
+        text-align: center;
+        display: inline;
+        margin-left: 5px;
+        color: #7910A8 ;
     }
     .card-header{
         color: #7910A8;
@@ -59,7 +61,7 @@
 
     .btn.btn-lg.btn-info.btn-block {
     background-color: #7910A8;
-    font-family: 'Darker Grotesque', ;
+    font-family: 'Darker Grotesque';
     }
     .btn.btn-lg.btn-info.btn-block:hover {
     background-color: rgb(65, 13, 88);
@@ -70,7 +72,11 @@
         font-family: 'Darker Grotesque' ;
         font-weight: bold;
     }
-    
+    .input-placeholder{
+        color:#7910A8;
+        font-family: 'Darker Grotesque' ;
+        font-weight: bold;
+    }
     :-moz-placeholder { /* Firefox 18- */
         color: #7910A8;  
         font-family: 'Darker Grotesque' ;
@@ -88,5 +94,8 @@
         font-family: 'Darker Grotesque';
         font-weight: bold;
 
+    }
+    .form-control::placeholder{
+        font-weight: bold;
     }
 }
